--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -123,6 +123,7 @@
 	}
 	.featured-image {
 		border-radius: 12px;
+		max-width: none !important;
 	}
 	@media (max-width: $breakpoint-sm) {
 		padding: 30px 0;
