--- a/src/assets/scss/_theme-variables.scss
+++ b/src/assets/scss/_theme-variables.scss
@@ -10,14 +10,14 @@ $breakpoint-xl: 1200px;
 	--font-family-mono: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
   --font-size-small: 12px;
   
-  --primary-color: #5C2941;
-  --header-bg: #5C2941;
+  --primary-color: #bf751a;
+  --header-bg: #bf751a;
 
   --home-link-color: #d4d4d4;
   --home-link-hover-color:  var(--primary-color);
 
   --button-color: #E5C3D3;
-  --button-alternate-color: #5C2941;
+  --button-alternate-color: #bf751a;
 
   --post-link-color: #0F070B;
 
