update blog link color

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -308,6 +308,9 @@ article img {
 		max-width: 768px;
 		margin: 0 auto;
 	}
+	a {
+		color: var(--primary-color);
+	}
 }
 // Contact page
 .contact-page {
