--- a/src/assets/scss/_theme-variables.scss
+++ b/src/assets/scss/_theme-variables.scss
@@ -13,8 +13,8 @@ $breakpoint-xl: 1200px;
   --primary-color: #5C2941;
   --header-bg: #5C2941;
 
-  --home-link-color: #d4d4d4;
-  --home-link-hover-color:  var(--primary-color);
+  --home-link-color: var(--primary-color);
+  --home-link-hover-color:  #0F070B;
 
   --button-color: #E5C3D3;
   --button-alternate-color: #5C2941;
